# papertrade

./: .dockerignore  .env.example  Dockerfile  README.md  code_walkthrough.md  docker-compose.yml  implementation_plan.md  next_steps_guide.md  pyproject.toml
artifacts/: risky.json  safe.json
src/papertrade/: __init__.py  cli.py  config.py  continuous_runtime.py  contracts.py  enums.py  feature_store.py  history.py  normalization.py  orchestrator.py  persistence.py  portfolio.py  report.py  rules.py  runtime.py  scheduler.py  scoring.py  single_cycle_runtime.py  slippage.py  snapshot_collector.py  state_store.py
src/papertrade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/papertrade/data_management/: __init__.py  persistence.py  report.py  state_store.py
src/papertrade/data_streaming/: __init__.py  snapshot_collector.py
src/papertrade/execution/: continuous_runtime.py  orchestrator.py  runtime.py  single_cycle_runtime.py
src/papertrade/sources/: __init__.py  http_client.py  liquidation.py  platform_bridge.py  platform_db.py  (+1 more)
tests/: test_cli.py  test_continuous_runtime.py  test_history.py  test_live_liquidation_source.py  test_live_source_adapters.py  test_orchestrator.py  test_persistence.py  test_platform_snapshot_source.py  test_portfolio.py  test_real_source_adapters.py  test_report_naming.py  test_research_artifacts.py  test_rules.py  test_runtime.py  test_scheduler.py  test_scoring.py  test_single_cycle_runtime.py  test_slippage.py  test_snapshot_collector.py  test_source_adapters.py  test_state_store.py
(+13 files in other folders)
