[project]
name = "papertrade"
version = "0.1.0"
description = "Forward paper trade scaffold"
requires-python = ">=3.12"
dependencies = [
  "websockets>=14,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
papertrade = "papertrade.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
